# adder-lang

./: CMakeLists.txt  LICENSE  asm.md  lang.md  readme.md
adder/: CMakeLists.txt  gvm.c  gvm_asminfo.h  gvm_compiler.h  gvm_cres.h  gvm_ctypes.h  gvm_env.c  gvm_heap.h  gvm_lexer.h  gvm_srcmap.c  gvm_srcmap.h  gvm_tokenizer.c  gvm_tokenizer.h  gvm_types.h  gvm_utils.c  gvm_utils.h  gvm_validate.h  gvm_value.c
adder-runner/: CMakeLists.txt  main.c
adder/compiler/: CMakeLists.txt  co_ast.h  co_bty.c  co_bty.h  co_compiler.c  co_compiler.h  co_cres.h  co_hm.c  co_hm.h  co_infer.c  co_infer.h  co_lexer.h  co_parser.c  co_parser.h  co_program.c  co_program.h  co_srcmap.c  co_srcmap.h  co_tokenizer.c  co_tokenizer.h  co_trace.h  co_typecheck.h  co_types.h  co_typing.c  co_typing.h  co_utils.c  co_utils.h
adder/compiler/inc/compiler/: gvm_ast.h  gvm_compiler.h  gvm_cres.h  gvm_lexer.h  gvm_parser.h  gvm_program.h  gvm_srcmap.h  gvm_tokenizer.h
adder/compiler/refcode/: co_hm.c  co_hm.h  co_infer.c  co_typing.c  co_typing.h
adder/compiler/src/: gvm_compiler.c  gvm_parser.c  gvm_program.c  gvm_srcmap.c  gvm_tokenizer.c
adder/shared/: CMakeLists.txt  sh_arena.c  sh_arena.h  sh_asminfo.c  sh_asminfo.h  sh_config.h  sh_ffi.c  sh_ffi.h  sh_ift.c  sh_ift.h  sh_log.c  sh_log.h  sh_msg_buffer.h  sh_program.c  sh_program.h  sh_types.h  sh_utils.c  sh_utils.h  sh_value.h
adder/shared/inc/shared/: gvm_asminfo.h  gvm_config.h  gvm_types.h  gvm_utils.h  gvm_value.h
adder/shared/src/: gvm_asminfo.c  gvm_utils.c
adder/vm/: CMakeLists.txt  vm.c  vm.h  vm_call.c  vm_call.h  vm_env.c  vm_env.h  vm_heap.c  vm_heap.h  vm_msg_buffer.h  vm_types.h  vm_validate.h  vm_value_tools.c  vm_value_tools.h
adder/vm/inc/vm/: gvm.h  gvm_env.h  gvm_heap.h  gvm_types.h  gvm_validate.h  gvm_value_tools.h
adder/vm/src/: gvm.c  gvm_env.c  gvm_heap.c  gvm_value_tools.c
adder/xutils/: CMakeLists.txt  generate-helpers.py  xu_call.c  xu_call.h  xu_invoke.c  xu_invoke.h  xu_lib.c  xu_lib.h
adrrun/: CMakeLists.txt  main.c
adrrun/test/: langtest.h  termhax.h  test_runner.c  test_runner.h
docs/: adrrun.md  asm.md  host-integration.md  lang-notes.md  language-features.md  thoughts.md  vm-asm.md  whats-next.md
examples/: basics.adr  export.adr
examples/host/: CMakeLists.txt  main.c
gvm/: CMakeLists.txt  gvm.c  gvm.h  gvm_asm.c  gvm_asm.h  gvm_asminfo.h  gvm_asmutils.c  gvm_asmutils.h  gvm_ast.h  gvm_build_result.h  gvm_codegen.h  gvm_compiler.c  gvm_compiler.h  gvm_compiler_types.h  gvm_config.h  gvm_cres.h  gvm_ctypes.h  gvm_env.c  gvm_env.h  gvm_grid.c  gvm_grid.h  gvm_heap.c  gvm_heap.h  gvm_ir.h  gvm_lexer.h  gvm_memory.c  gvm_memory.h  gvm_parser.c  gvm_parser.h  gvm_srcmap.c  gvm_strmatch.h  gvm_test.c  gvm_test.h  gvm_tokenizer.c  gvm_tokenizer.h  gvm_types.h  gvm_utils.c  gvm_utils.h  gvm_val_buffer.c  gvm_val_buffer.h  (+3 more)
gvm-runner/: CMakeLists.txt  main.c
gvm-runner/resources/: test.adr  test.gvm  test_01.gvm  test_02.gvm  tmp.gvm
gvm-runner/test/: langtest.h  termhax.h  test_runner.c
scripts/: prototype_hindley_milner.py  prototype_simplified.py  test.adr
test-app/: CMakeLists.txt  main.c  termgfx.c  termgfx.h
test-app/board/: board.c  board.h  termhax.h
test-app/resources/: test.gvm  test2.gvm  test_01.gvm
test-app/scripts/: type_1.gvm
test-app/test/: test_runner.c  test_runner.h
test-app/utils/: keyboard.h  termhax.h
